v0.0.10   Thu, 19 Jan 2017 12:26:46 +0900
  - export $WAITING_DEPOSIT

v0.0.9    Thu, 19 Jan 2017 12:09:11 +0900
  - 입금대기 상태를 추가

v0.0.8    Tue, 03 Jan 2017 13:21:58 +0900
  - 온라인 상태를 update
  - @OpenCloset::Constants::Measurement::PRIMARY 에 윗배와 엉덩이 둘레를 추가

v0.0.7    Fri, 01 Jul 2016 15:17:57 +0900
  - 사이즈제안에서 여성팬츠를 고려

v0.0.6    Fri, 20 May 2016 17:42:37 +0900
  - category 의 export 변수 추가

v0.0.5    Fri, 20 May 2016 17:17:17 +0900
  - Export category hash MAPs

v0.0.4    Sat, 14 May 2016 05:45:57 +0900
  - resize 된 허리 둘레에 맞춰서 밑단을 계산하도록 함

v0.0.3    Thu, 12 May 2016 13:12:24 +0900
  - Fix assigned clothes top, bottom syntax

v0.0.2    Thu, 12 May 2016 12:34:40 +0900
  - 정해진 표를 통해 의류의 수선 사이즈를 제안
  - Add OpenCloset::Constants::Status
  - Add OpenCloset::Common::Clothes

v0.0.1    Mon, 02 May 2016 18:56:40 +0900
  - Initial release