@@ -1,3 +1,5 @@
+  - Add OpenCloset::Constants
+
 v0.0.10   Thu, 19 Jan 2017 12:26:46 +0900
   - export $WAITING_DEPOSIT
 
